<resources>
    <string name="app_name">19200200_PARCIAL_DAM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_gastos">Gastos</string>
    <string name="menu_tareas">Tareas</string>
    <string name="menu_equipos">Equipos</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="btLogin">Log In</string>
    <string name="Ingreso">Ingrese su ingreso fijo</string>
    <string name="GastoFijo">Ingrese su gasto fijo</string>
    <string name="GastoVariable">Ingrese su gasto variable</string>
    <string name="Calcular">Calcular</string>
</resources>