<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_gastos">

    <fragment
        android:id="@+id/nav_gastos"
        android:name="dev.sebastianbolivar.a19200200_parcial_dam.ui.home.HomeFragment"
        android:label="@string/menu_gastos"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_tareas"
        android:name="dev.sebastianbolivar.a19200200_parcial_dam.ui.gallery.GalleryFragment"
        android:label="@string/menu_tareas"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_equipos"
        android:name="dev.sebastianbolivar.a19200200_parcial_dam.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_equipos"
        tools:layout="@layout/fragment_slideshow" />
</navigation>